Fix for Java let access xmltask modules